changes and additions have been made

--- a/pricing/pricing.html
+++ b/pricing/pricing.html
@@ -18,6 +18,7 @@
                     <span>Product</span>
                 </div>
                 <div class="navigation__right">
+                    <button class="navigation__right__hamburger"></button>
                     <ul>
                         <li class="navigation__right__li"><a href="../index.html">Product</a></li>
                         <li class="navigation__right__li"><a href="#">Customers</a></li>
