--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <span>Product</span>
                 </div>
                 <div class="navigation__right">
+                    <button class="navigation__right__hamburger"></button>
                     <ul>
                         <li class="navigation__right__li"><a href="#">Product</a></li>
                         <li class="navigation__right__li"><a href="#">Customers</a></li>
@@ -25,7 +26,7 @@
                         <li class="navigation__right__li"><a href="#">Resources</a></li>
                         <li class="navigation__right__button"><button class="navigation__right__button--in">Sign In</button></li>
                         <li class="navigation__right__button"><button class="navigation__right__button--up">Sign Up</button></li>
-                        <li><button class="mode-btn"></button></li>
+                        <button class="mode-btn"></button>
                     </ul>
                 </div>
             </div>
